aks.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vjapp-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vjapp
    spec:
      containers:
       - name: vjapp
         image: vdonthireddy/vjapp:4.0
         ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vjapp-service
  labels:
    app: vjapp-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: vjapp
