api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
  - name: "9436"
    port: 9436
    targetPort: 9436
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
